@@ -246,9 +246,16 @@ c(test.num.copy, round(opt.C))[i], prior.K, mapping.bias.ok, seg.id, min.variant
         posteriors$ML.M == 0 | posteriors$ML.C == 1)
     
     posteriors$CN.SUBCLONAL <- subclonal
-    posteriors$CELLFRACTION <-  (posteriors$AR/posteriors$ML.M) *
-        (p*posteriors$ML.C + 2 * (1-p)) / p
-    posteriors$CELLFRACTION[!posteriors$ML.SOMATIC] <- NA
+    depth <-as.numeric(geno(vcf[vcf.ids])$DP[, tumor.id.in.vcf])
+    ar <- posteriors$AR.ADJUSTED
+    ar[!posteriors$ML.SOMATIC] <- NA
+
+    m <-  t(apply(cbind(ar, depth,  posteriors$ML.C), 1, function(x) 
+        .calculate_ccf(vaf = x[1], depth = x[2], purity = p, C = x[3])))
+
+    posteriors$CELLFRACTION <- m[,1]
+    posteriors$CELLFRACTION.95.LOWER <- m[,2]
+    posteriors$CELLFRACTION.95.UPPER <- m[,3]
 
     rm.snv.posteriors <- apply(likelihoods, 1, max)
     idx.ignore <- rm.snv.posteriors == 0 |
@@ -258,7 +265,7 @@ c(test.num.copy, round(opt.C))[i], prior.K, mapping.bias.ok, seg.id, min.variant
     posteriors$FLAGGED <- idx.ignore
 
     posteriors$log.ratio <- snv.lr[vcf.ids]
-    posteriors$depth <-as.numeric(geno(vcf[vcf.ids])$DP[, tumor.id.in.vcf])
+    posteriors$depth <- depth
     posteriors$prior.somatic <- prior.somatic[vcf.ids]
     posteriors$prior.contamination <- prior.cont[vcf.ids]
     posteriors$on.target <- info(vcf[vcf.ids])$OnTarget
@@ -1066,3 +1073,26 @@ c(test.num.copy, round(opt.C))[i], prior.K, mapping.bias.ok, seg.id, min.variant
     estimatedRate <- if (fractionChrs >= min.fraction.chromosomes) estimatedRate else 0
     estimatedRate
 }
+
+.calculate_ccf <- function(vaf, depth, purity, C){
+    # see DOI: 10.1126/scitranslmed.aaa1408
+    if (is.na(vaf)) return(c(NA,NA,NA))
+    possible_ccfs <- seq(0.01, 1, 0.01)
+    possible_vafs <- (purity * possible_ccfs)/
+        ((2 * (1 - purity)) + (purity * C)) #Expected VAF for each CCF
+    possible_vafs <- pmax(pmin(possible_vafs, 1), 0)    
+    probs <- dbinom(x=round(vaf*depth), size = depth, prob = possible_vafs) #Prob of observed VAF
+    names(probs) <- possible_ccfs
+    if (!sum(probs)) return(c(NA,NA,NA))
+    probs_norm <- probs / sum(probs) #Normalise to get posterior distribution
+    probs_sort <- sort(probs_norm, decreasing=T)
+    probs_cum <- cumsum(probs_sort)
+    n <- sum(probs_cum < 0.95) + 1 #Get 95% confidence interval (95% of probability)
+    threshold <- probs_sort[n]
+    cint  <- probs[probs_norm >= threshold]
+    ccf_point <- as.numeric(names(which.max(probs_norm)))
+    ccf_lower <- as.numeric(names(cint)[1])
+    ccf_upper <- as.numeric(names(cint)[length(cint)])
+    return(c(ccf_point, ccf_lower, ccf_upper))
+}
+
