@@ -271,3 +271,19 @@ number="4",
 pages="e1004873"
 }
 
+@Article{McGranahan2015,
+author="McGranahan, Nicholas
+and Favero, Francesco
+and de Bruin, Elza C.
+and Birkbak, Nicolai Juul
+and Szallasi, Zoltan
+and Swanton, Charles",
+title="Clonal status of actionable driver events and the timing of mutational processes in cancer evolution.",
+journal="Science translational medicine",
+year="2015",
+month="Apr",
+day="15",
+volume="7",
+number="283",
+pages="283ra54"
+}
